--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -31,13 +31,19 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
-    compile "io.reactivex.rxjava2:rxkotlin:2.1.0"
-
     compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
+
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    compile 'io.reactivex.rxjava2:rxkotlin:2.1.0'
 
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
 }
 repositories {
     mavenCentral()
