--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,12 @@
 
         </activity>
 
+        <activity android:name=".ui.activity.RegisterActivity"
+                  android:launchMode="singleTask"/>
+
+        <activity android:name=".ui.activity.LoginActivity"
+                  android:launchMode="singleTask"/>
+
     </application>
 
 </manifest>
